// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flyout conflicts should allow conflict resolution 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="s"
>
  <EuiFlyoutHeader
    hasBorder={false}
  >
    <EuiTitle
      size="m"
    >
      <h2>
        <FormattedMessage
          defaultMessage="Import saved objects"
          id="kbn.management.objects.objectsTable.flyout.importSavedObjectTitle"
          values={Object {}}
        />
      </h2>
    </EuiTitle>
    <React.Fragment>
      <EuiSpacer
        size="s"
      />
      <EuiCallOut
        color="warning"
        iconType="help"
        size="m"
        title={
          <FormattedMessage
            defaultMessage="Index Pattern Conflicts"
            id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsTitle"
            values={Object {}}
          />
        }
      >
        <p>
          <FormattedMessage
            defaultMessage="The following saved objects use index patterns that do not exist. Please select the index patterns you'd like re-associated with them. You can {indexPatternLink} if necessary."
            id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsDescription"
            values={
              Object {
                "indexPatternLink": <EuiLink
                  color="primary"
                  href=""
                  type="button"
                >
                  <FormattedMessage
                    defaultMessage="create a new index pattern"
                    id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsCalloutLinkText"
                    values={Object {}}
                  />
                </EuiLink>,
              }
            }
          />
        </p>
      </EuiCallOut>
    </React.Fragment>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiInMemoryTable
      columns={
        Array [
          Object {
            "description": "ID of the index pattern",
            "field": "existingIndexPatternId",
            "name": "ID",
            "sortable": true,
          },
          Object {
            "description": "How many affected objects",
            "field": "list",
            "name": "Count",
            "render": [Function],
          },
          Object {
            "description": "Sample of affected objects",
            "field": "list",
            "name": "Sample of affected objects",
            "render": [Function],
          },
          Object {
            "field": "existingIndexPatternId",
            "name": "New index pattern",
            "render": [Function],
          },
        ]
      }
      items={
        Array [
          Object {
            "existingIndexPatternId": "MyIndexPattern*",
            "list": Array [
              Object {
                "id": "MyIndexPattern*",
                "name": "MyIndexPattern*",
                "type": "index-pattern",
              },
            ],
            "newIndexPatternId": undefined,
          },
        ]
      }
      pagination={
        Object {
          "pageSizeOptions": Array [
            5,
            10,
            25,
          ],
        }
      }
      responsive={true}
      sorting={false}
    />
  </EuiFlyoutBody>
  <EuiFlyoutFooter>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="spaceBetween"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          color="primary"
          iconSide="left"
          onClick={[MockFunction]}
          size="s"
          type="button"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="kbn.management.objects.objectsTable.flyout.import.cancelButtonLabel"
            values={Object {}}
          />
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButton
          color="primary"
          data-test-subj="importSavedObjectsConfirmBtn"
          fill={true}
          iconSide="left"
          isLoading={false}
          onClick={[Function]}
          size="s"
          type="button"
        >
          <FormattedMessage
            defaultMessage="Confirm all changes"
            id="kbn.management.objects.objectsTable.flyout.importSuccessful.confirmAllChangesButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlyoutFooter>
</EuiFlyout>
`;

exports[`Flyout conflicts should handle errors 1`] = `
<EuiCallOut
  color="danger"
  iconType="cross"
  size="m"
  title={
    <FormattedMessage
      defaultMessage="Sorry, there was an error"
      id="kbn.management.objects.objectsTable.flyout.errorCalloutTitle"
      values={Object {}}
    />
  }
>
  <p>
    foobar
  </p>
</EuiCallOut>
`;

exports[`Flyout should render import step 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="s"
>
  <EuiFlyoutHeader
    hasBorder={false}
  >
    <EuiTitle
      size="m"
    >
      <h2>
        <FormattedMessage
          defaultMessage="Import saved objects"
          id="kbn.management.objects.objectsTable.flyout.importSavedObjectTitle"
          values={Object {}}
        />
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiForm>
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Please select a JSON file to import"
            id="kbn.management.objects.objectsTable.flyout.selectFileToImportFormRowLabel"
            values={Object {}}
          />
        }
      >
        <EuiFilePicker
          compressed={false}
          initialPromptText={
            <FormattedMessage
              defaultMessage="Import"
              id="kbn.management.objects.objectsTable.flyout.importPromptText"
              values={Object {}}
            />
          }
          onChange={[Function]}
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
      >
        <EuiSwitch
          checked={true}
          data-test-subj="importSavedObjectsOverwriteToggle"
          label={
            <FormattedMessage
              defaultMessage="Automatically overwrite all saved objects?"
              id="kbn.management.objects.objectsTable.flyout.overwriteSavedObjectsLabel"
              values={Object {}}
            />
          }
          name="overwriteAll"
          onChange={[Function]}
        />
      </EuiFormRow>
    </EuiForm>
  </EuiFlyoutBody>
  <EuiFlyoutFooter>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="spaceBetween"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          color="primary"
          iconSide="left"
          onClick={[MockFunction]}
          size="s"
          type="button"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="kbn.management.objects.objectsTable.flyout.import.cancelButtonLabel"
            values={Object {}}
          />
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButton
          color="primary"
          data-test-subj="importSavedObjectsImportBtn"
          fill={true}
          iconSide="left"
          isLoading={false}
          onClick={[Function]}
          size="s"
          type="button"
        >
          <FormattedMessage
            defaultMessage="Import"
            id="kbn.management.objects.objectsTable.flyout.import.confirmButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlyoutFooter>
</EuiFlyout>
`;
